hphp/hack/test/typecheck/akshape/keys.php.exp
File "keys.php", line 10, characters 26-27:
Invalid argument (Typing[4110])
File "keys.php", line 13, characters 43-45:
This is an int
File "keys.php", line 9, characters 6-10:
It is incompatible with a string
